--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -75,4 +75,8 @@
 	<InternalsVisibleTo Include="Application.UnitTests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Model\AddressCommand.cs" />
+  </ItemGroup>
+
 </Project>
